framec/tests/snapshots/csharp_snapshots__selfcall.snap
---
source: framec/tests/csharp_snapshots.rs
expression: "compile_fixture(\"06_selfcall\", \"csharp\")"
---
using System;
using System.Collections.Generic;
using System.Threading.Tasks;

class SelfCallFrameEvent {
    public string _message;
    public List<object> _parameters;

    public SelfCallFrameEvent(string message) {
        this._message = message;
        this._parameters = new List<object>();
    }

    public SelfCallFrameEvent(string message, List<object> parameters) {
        this._message = message;
        this._parameters = parameters;
    }
}

class SelfCallFrameContext {
    public SelfCallFrameEvent _event;
    public object? _return;
    public Dictionary<string, object> _data;
    public bool _transitioned = false;

    public SelfCallFrameContext(SelfCallFrameEvent ev, object? defaultReturn = null) {
        this._event = ev;
        this._return = defaultReturn;
        this._data = new Dictionary<string, object>();
        this._transitioned = false;
    }
}

class SelfCallCompartment {
    public string state;
    public List<object> state_args;
    public Dictionary<string, object> state_vars;
    public List<object> enter_args;
    public List<object> exit_args;
    public SelfCallFrameEvent? forward_event;
    public SelfCallCompartment? parent_compartment;

    public SelfCallCompartment(string state) {
        this.state = state;
        this.state_args = new List<object>();
        this.state_vars = new Dictionary<string, object>();
        this.enter_args = new List<object>();
        this.exit_args = new List<object>();
        this.forward_event = null;
        this.parent_compartment = null;
    }

    public SelfCallCompartment Copy() {
        SelfCallCompartment c = new SelfCallCompartment(this.state);
        c.state_args = new List<object>(this.state_args);
        c.state_vars = new Dictionary<string, object>(this.state_vars);
        c.enter_args = new List<object>(this.enter_args);
        c.exit_args = new List<object>(this.exit_args);
        c.forward_event = this.forward_event;
        c.parent_compartment = this.parent_compartment;
        return c;
    }
}

public class SelfCall {
    private List<SelfCallCompartment> _state_stack;
    private SelfCallCompartment __compartment;
    private SelfCallCompartment? __next_compartment;
    private List<SelfCallFrameContext> _context_stack;
    public int count = 0;

    public SelfCall() {
        _state_stack = new List<SelfCallCompartment>();
        _context_stack = new List<SelfCallFrameContext>();
        this.__compartment = __prepareEnter("Active", new List<object>(), new List<object>());
        this.__next_compartment = null;
    }

    public void __frame_init() {
        SelfCallFrameEvent __e = new SelfCallFrameEvent("$>", __compartment.enter_args);
        SelfCallFrameContext __ctx = new SelfCallFrameContext(__e, null);
        _context_stack.Add(__ctx);
        __kernel(__e);
        _context_stack.RemoveAt(_context_stack.Count - 1);
    }

    public static SelfCall __create() {
        SelfCall c = new SelfCall();
        c.__frame_init();
        return c;
    }

    private Dictionary<string, List<string>> hsm_chain() {
        return new Dictionary<string, List<string>> {
            { "Active", new List<string> { "Active" } },
        };
    }
    private SelfCallCompartment __prepareEnter(string leaf, List<object> state_args, List<object> enter_args) {
        SelfCallCompartment? comp = null;
        foreach (string name in hsm_chain()[leaf]) {
            SelfCallCompartment new_comp = new SelfCallCompartment(name);
            new_comp.state_args = new List<object>(state_args);
            new_comp.enter_args = new List<object>(enter_args);
            new_comp.parent_compartment = comp;
            comp = new_comp;
        }
        return comp!;
    }

    private void __prepareExit(List<object> exit_args) {
        SelfCallCompartment? comp = __compartment;
        while (comp != null) {
            comp.exit_args = new List<object>(exit_args);
            comp = comp.parent_compartment;
        }
    }

    private void __kernel(SelfCallFrameEvent __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            SelfCallCompartment next_compartment = __next_compartment!;
            __next_compartment = null;
            // Exit the current (leaf) state.
            SelfCallFrameEvent exit_event = new SelfCallFrameEvent("<$", __compartment.exit_args);
            __router(exit_event);
            // Switch to the new compartment.
            __compartment = next_compartment;
            // Three-branch forward-event handling.
            SelfCallFrameEvent? forward_event = next_compartment.forward_event;
            next_compartment.forward_event = null;
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                SelfCallFrameEvent enter_event = new SelfCallFrameEvent("$>", __compartment.enter_args);
                __router(enter_event);
            } else if (forward_event._message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                SelfCallFrameEvent enter_event = new SelfCallFrameEvent("$>", __compartment.enter_args);
                __router(enter_event);
                __router(forward_event);
            }
            foreach (var ctx in _context_stack) {
                ctx._transitioned = true;
            }
        }
    }

    private void __router(SelfCallFrameEvent __e) {
        if (__compartment.state == "Active") {
            _state_Active(__e, __compartment);
        }
    }

    private void __transition(SelfCallCompartment next) {
        __next_compartment = next;
    }

    public void kick() {
        SelfCallFrameEvent __e = new SelfCallFrameEvent("kick", new List<object>());
        SelfCallFrameContext __ctx = new SelfCallFrameContext(__e, null);
        _context_stack.Add(__ctx);
        __kernel(_context_stack[_context_stack.Count - 1]._event);
        _context_stack.RemoveAt(_context_stack.Count - 1);
    }

    public int report() {
        SelfCallFrameEvent __e = new SelfCallFrameEvent("report", new List<object>());
        SelfCallFrameContext __ctx = new SelfCallFrameContext(__e, null);
        _context_stack.Add(__ctx);
        __kernel(_context_stack[_context_stack.Count - 1]._event);
        var __result = (int) _context_stack[_context_stack.Count - 1]._return;
        _context_stack.RemoveAt(_context_stack.Count - 1);
        return __result;
    }

    private void _state_Active(SelfCallFrameEvent __e, SelfCallCompartment compartment) {
        if (__e._message == "kick") {
            this._s_Active_hdl_user_kick(__e, compartment);
            return;
        }
        if (__e._message == "report") {
            this._s_Active_hdl_user_report(__e, compartment);
            return;
        }
    }

    private void _s_Active_hdl_user_kick(SelfCallFrameEvent __e, SelfCallCompartment compartment) {
        self.count = self.count + 1
        this.report();
        if (_context_stack.Count > 0 && _context_stack[_context_stack.Count - 1]._transitioned) return;
    }

    private void _s_Active_hdl_user_report(SelfCallFrameEvent __e, SelfCallCompartment compartment) {
        _context_stack[_context_stack.Count - 1]._return = self.count;
    }
}
